<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="state"
            type="com.planradar.task.features.weather.WeatherUiState" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.weather.WeatherFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            app:isVisible="@{state.weather != null}"
            tools:visibility="visible">

            <TextView
                android:id="@+id/txtWeatherDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/NormalTextStyle"
                app:cityName="@{state.weather.cityName}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:weatherFetchDate="@{state.weather.date}"
                tools:text="Weather information for Cairo received on 15.01.2022 18:00." />


            <ImageView
                android:id="@+id/imageWeatherIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/txtWeatherDate"
                app:layout_constraintTop_toBottomOf="@+id/txtWeatherDate"
                app:weatherIconId="@{state.weather.iconId}"
                tools:background="@color/black" />

            <TextView
                android:id="@+id/txtDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_description"
                android:textAppearance="@style/NormalTextStyle"
                app:layout_constraintStart_toStartOf="@+id/imageWeatherIcon"
                app:layout_constraintTop_toBottomOf="@+id/imageWeatherIcon" />

            <TextView
                android:id="@+id/txtDescriptionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{state.weather.description}"
                android:textAppearance="@style/NormalTextStyle"
                app:layout_constraintBottom_toBottomOf="@+id/txtDescriptionLabel"
                app:layout_constraintStart_toEndOf="@+id/txtDescriptionLabel"
                app:layout_constraintTop_toTopOf="@+id/txtDescriptionLabel"
                tools:text="Cloudy" />

            <TextView
                android:id="@+id/txtTemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_temp"
                android:textAppearance="@style/NormalTextStyle"
                app:layout_constraintStart_toStartOf="@+id/txtDescriptionLabel"
                app:layout_constraintTop_toBottomOf="@+id/txtDescriptionLabel" />

            <TextView
                android:id="@+id/txtTemValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text='@{state.weather.temp + " C"}'
                android:textAppearance="@style/NormalTextStyle"
                app:layout_constraintBottom_toBottomOf="@+id/txtTemLabel"
                app:layout_constraintStart_toEndOf="@+id/txtTemLabel"
                app:layout_constraintTop_toTopOf="@+id/txtTemLabel"
                tools:text="12 C" />

            <TextView
                android:id="@+id/txtHumidityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_humidity"
                android:textAppearance="@style/NormalTextStyle"
                app:layout_constraintStart_toStartOf="@+id/txtTemLabel"
                app:layout_constraintTop_toBottomOf="@+id/txtTemLabel" />

            <TextView
                android:id="@+id/txtHumidityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text='@{state.weather.humidity + " %"}'
                android:textAppearance="@style/NormalTextStyle"
                app:layout_constraintBottom_toBottomOf="@+id/txtHumidityLabel"
                app:layout_constraintStart_toEndOf="@+id/txtHumidityLabel"
                app:layout_constraintTop_toTopOf="@+id/txtHumidityLabel"
                tools:text="45 %" />

            <TextView
                android:id="@+id/txtWindLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_wind_speed"
                android:textAppearance="@style/NormalTextStyle"
                app:layout_constraintStart_toStartOf="@+id/txtHumidityLabel"
                app:layout_constraintTop_toBottomOf="@+id/txtHumidityLabel" />

            <TextView
                android:id="@+id/txtWindValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text='@{state.weather.windSpeed + " kmh"}'
                android:textAppearance="@style/NormalTextStyle"
                app:layout_constraintBottom_toBottomOf="@+id/txtWindLabel"
                app:layout_constraintStart_toEndOf="@+id/txtWindLabel"
                app:layout_constraintTop_toTopOf="@+id/txtWindLabel"
                tools:text="20 kmh" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:isVisible="@{state.isLoading}"
            tools:visibility="gone" />


        <LinearLayout
            android:id="@+id/errorView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:isVisible="@{state.isError}">

            <TextView
                android:id="@+id/txtMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/NormalTextStyle"
                android:textColor="@color/design_default_color_error"
                app:nullableText="@{state.error}"
                tools:text="@string/error_common" />

            <TextView
                android:id="@+id/btnTryAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/btn_try_again"
                android:textAppearance="@style/NormalTextStyle"
                android:textStyle="bold" />

        </LinearLayout>

    </FrameLayout>

</layout>